--- a/app/templates/projects/project.html
+++ b/app/templates/projects/project.html
@@ -7,18 +7,14 @@ Projets en progrès
 {% block content %}
 <div class="column">
     <div class="row">
-        
-        <div class="block row" style="width: 85%; padding-top: 0px;">
+        <div class="block row" style="width: 100%; padding-top: 0px; height: 100%;">
             <div class="column">
-                <div class="box-black-huge" style="width: 50%; height: auto;">
+                <div class="box-black-huge" style="size: 50%; height: auto;">
                     <h5 style="opacity: .5; float: left;">Description</h5>
                 </div>
-
-                
-
                 {%if g.user['profile_pic'] is none%}
                 <a href="{{url_for('user.show_profile')}}">
-                    <img class="round" src="/static/imgs/profile-pic.webp" alt="default profile pic" style="width: 5%;">
+                    <img class="round" src="/static/imgs/profile-pic.webp" alt="default profile pic" style="width: 50px;">
                 </a>
                 {% else %}
                 <a href="{{url_for('user.show_profile')}}">
@@ -27,17 +23,28 @@ Projets en progrès
                 {% endif %}
                 <span>{{ g.user['username'] }}</span>
             </div>
-             
-                <h3 style="margin: auto; margin-right: 20%;"><a href="{{url_for('projects.project')}}" style="text-decoration: none; color: white;">Aucun projet n'a été déposé...</a></h3>
-            
+                <h3 class="projectNone"><a href="{{url_for('projects.project')}}" class="projectNone1">Aucun projet n'a été déposé...</a></h3> 
         </div>
-        <div class="column">
+        <div class="column" >
             <h2 style="float: left;  margin-left:5%;">Titre</h2>
-            <div class="block row" style="width: auto; height: auto;">
-                <div class="box-black-huge">
-                    <h5 style="opacity: .5;">Description</h5>
-
+            <div class="block column" style="width: 400px;">
+                <div class="row" style="width: auto; height: auto;">
+                    <div class="box-black-huge">
+                        <h5 style="opacity: .5; width: 250px;">{{g.user['desc']}}</h5>
+                    </div>
+                        {%if g.user['profile_pic'] is none%}
+                        <a href="{{url_for('user.show_profile')}}">
+                            <img class="round" src="/static/imgs/profile-pic.webp" alt="default profile pic" style="width: 50px; margin: 10px;">
+                        </a>
+                        {% else %}
+                        <a href="{{url_for('user.show_profile')}}">
+                            <span style="color: black;">{{g.user['profile_pic']}}</span>
+                        </a>
+                        {% endif %}
                 </div>
+                <button class="button" style="margin-left: 0%;">
+                    Publier
+                </button>
             </div>
         </div>
     </div>
