tentatives pour montrer les projets dans le site web

--- a/app/templates/projects/projects.html
+++ b/app/templates/projects/projects.html
@@ -31,13 +31,39 @@ Projets en progrès
                     Publier
                 </button>
             </div>
-             
+            
                 <h3 style="margin: auto; margin-right: 20%;"><a href="{{url_for('projects.project')}}" style="text-decoration: none; color: white;">Aucun projet n'a été déposé...</a></h3>
             
         </div>
         
         <h2 style="float: right;">Mes projets actuels</h2>
     </div>
+    <h1>Your Galleries</h1>
+
+    {% if galleries %}
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Deadline</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for gallery in galleries %}
+                    <tr>
+                        <td>{{ gallery['id_gallery'] }}</td>
+                        <td>{{ gallery['name'] }}</td>
+                        <td>{{ gallery['description'] }}</td>
+                        <td>{{ gallery['deadline'] }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    {% else %}
+        <p>No galleries found.</p>
+    {% endif %}
     
 </div>
 {% endblock %}
