--- a/app/templates/create/send.html
+++ b/app/templates/create/send.html
@@ -22,9 +22,11 @@ Envoyer l'email
             <h5>Couleur de l'arrière-plan : {{g.gallery['color']}}</h5>
         </div>
     </div>
-    <button onclick="location.href='{{ url_for('projects.projects') }}'" class="center button">
-        Confirmer et envoyer
-    </button>
-    <a href="{{ url_for('create.createproject')}}" style="text-decoration: none;"><h5 class="center" style="opacity: .5;">retour</h5></a>
+    <form action="{{ url_for('create.delete_last_gallery') }}" method="POST">
+        <button onclick="location.href='{{ url_for('projects.projects') }}'" class="center button">
+            Confirmer et envoyer
+        </button>
+        <a href="{{ url_for('create.createproject')}}" style="text-decoration: none;"><h5 class="center" style="opacity: .5;">retour</h5></a>
+    </form>
 </div>
 {% endblock %}
