--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -431,6 +431,13 @@ a[href=emailcode]:hover{
   resize: none;
 }
 
+.bbh-text{
+  height: auto;
+  min-height: 200px;
+  justify-content: left;
+  margin-left: 10px;
+}
+
 .blk-bx-margin{
   margin: 15px 12px 15px 12px;
 }
