mise en page de "mes projets" si l'utilisateur n'a aucune galerie

--- a/app/templates/projects/projects.html
+++ b/app/templates/projects/projects.html
@@ -51,10 +51,12 @@ Projets en progrès
         </div>
     {% endfor %}
 {% else %}
-    <div class="row" style="width: 70%; margin-right: 10%;">
-        <p>Vous n'avez crée aucune galerie...</p>
+    <div>
+    <div class="row" style="margin-right: 10%;">
+        <h3 style="width: 100%; padding-top: 100px;">Vous n'avez crée aucune galerie...</h3>
+        <h2 style="float: right;">Mes projets actuels</h2>
     </div>
-    <h2 style="float: right;">Mes projets actuels</h2>
+    </div>
 {% endif %}
 </div>
 {% endblock %}
