--- a/app/templates/artists/people.html
+++ b/app/templates/artists/people.html
@@ -6,52 +6,22 @@
 
 {% block content %}
   <h2>Artistes</h2>
-  <div class="column">
-    <div class="row around">
-      <div class="column artist-work">
-        <div class="row start">
-          <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
-          <p style="margin-top: auto;">nom d'utilisateur</p>
+  <div class="column" style="margin-bottom: 50px;">
+    {%if users%}
+      {%for user in users%}
+        {% if loop.index % 3 == 1 %}
+        <div class="row around" style="margin-top: 50px;">
+        {%endif%}
+          <div class="column artist-work">
+            <div class="row start">
+              <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
+              <p style="margin-top: auto;">{{user['username']}}</p>
+            </div>
+            <img src="/static/imgs/ex.jpg">
+          </div>
+        {% if loop.index % 3 == 0 or loop.last %}
         </div>
-        <img src="/static/imgs/ex.jpg">
-      </div>
-      <div class="column artist-work">
-        <div class="row start">
-          <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
-          <p style="margin-top: auto;">nom d'utilisateur</p>
-        </div>
-        <img src="/static/imgs/ex.jpg">
-      </div>
-      <div class="column artist-work">
-        <div class="row start">
-          <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
-          <p style="margin-top: auto;">nom d'utilisateur</p>
-        </div>
-        <img src="/static/imgs/ex.jpg">
-      </div>
-    </div>
-    <div class="row around" style="margin-top: 2%;">
-      <div class="column artist-work">
-        <div class="row start">
-          <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
-          <p style="margin-top: auto;">nom d'utilisateur</p>
-        </div>
-        <img src="/static/imgs/ex.jpg">
-      </div>
-      <div class="column artist-work" >
-        <div class="row start">
-          <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
-          <p style="margin-top: auto;">nom d'utilisateur</p>
-        </div>
-        <img src="/static/imgs/ex.jpg">
-      </div>
-      <div class="column artist-work">
-        <div class="row start">
-          <img class="round artist_pfp" src="/static/imgs/profile-pic.webp" alt="default profile pic">
-          <p style="margin-top: auto;">nom d'utilisateur</p>
-        </div>
-        <img src="/static/imgs/ex.jpg">
-      </div>
-    </div>
-  </div>
+        {% endif %}
+      {% endfor %}
+    {% endif %}
 {% endblock %}
