--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -372,6 +372,47 @@ a[href=emailcode]:hover{
   border-radius: 50%;
 }
 
+.pp_container {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  border-radius: 50%; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.pp_container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  filter: brightness(100%);
+  transition: .5s ease;
+}
+
+.pp_container:hover img{
+  filter: brightness(50%);
+}
+
+.pp_container i{
+  position: absolute;
+  font-size: 50px;
+  margin: auto;
+  justify-content: center;
+  color: black;
+  opacity: .5 ;
+  transition: .5s ease;
+  pointer-events: none;
+}
+
+.pp_container:hover i{
+  opacity: 1;
+  color: #EF1344;
+}
+
 .profile_proj{
   display: flex;
   flex-direction: row;
