Le code pour sauvegarder la photo de profil fonctionne

--- a/app/templates/user/edit.html
+++ b/app/templates/user/edit.html
@@ -24,7 +24,7 @@
                                     {% endif %}
                                     <i class='fas fa-pen-nib'></i>
                                 </div>
-                            </label>
+                            </label>yx
                         
                         <div style="margin-left: 50px;">
                             <h3>
