--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,7 +36,7 @@
                     </a>
                 {% else %}
                     <a href="{{url_for('user.show_profile')}}">
-                        <span>{{g.user['profile_pic']}}</span>
+                        <img id="p-pic" src="{{ url_for('static', filename=user.profile_pic) }}" alt="Profile Picture">
                     </a>
                 {% endif %}
             </div>
